# applied_theories

./: .gitignore  README.md  command.sh  confidence_intervals_for_ml.ipynb  delete_files_and_dirs.py  pyproject.toml
ImageNet/: AlexNet.ipynb  tiny_image_net.ipynb
ImageNetwork/: AlexNet.py  VGG-16.ipynb  download_datasets.ipynb  pyproject.toml  tiny_image_net.ipynb
ImageNetwork/classification/: AlexNet.ipynb  VGG-16-Copy1.ipynb  VGG-16.ipynb  cnn-basics-net.ipynb
chatbot/: Untitled.ipynb  data-preprocessing.ipynb
chatbot/artifacts/: WORD_MAP.json
classify names /: classifying_names_with_a_character-level_rnn.ipynb
embeddings/: Building a tokenizer, block by block.ipynb  GLoVe.ipynb  tokenizer-part2.ipynb  tokenizer.ipynb  tokenizer.json
lightning examples/: ann.ipynb  auto-encoder.ipynb  cnn.ipynb  gru.ipynb  lstm.ipynb  rnn.ipynb
miscellaneous/sentiment analysis/: sentiment_analysis_e_OHE.ipynb
others/: counterfactual_explanations.ipynb  mutual_funds.__incomplete.ipynb
pytorch examples/: annn.ipynb  autoencoder.ipynb  bidirectional-lstm.ipynb  cnn.ipynb  rnn-gru.ipynb  rnn-lstm-Copy1.ipynb  transfer_learning.ipynb  vae.ipynb  vairiational_autoencoder.ipynb
sentiment analysis/: sentiment_analysis_e_GLoVe.ipynb  sentiment_analysis_e_sentence_embeddings.ipynb  sentiment_embedding.ipynb
text classification/: text-paraphrase-classification.ipynb  text-paraphrase-classification_incomplete.ipynb
timeseries/recap/: with_pandas.ipynb
token classification/: name_entity_recognition,_part_of_speech.ipynb
word embeddings/: tokenizer.ipynb
(+5 files in other folders)
