[tool.poetry]
name = "vision"
version = "0.1.0"
description = ""
authors = ["Jha-Pranav <pranavjha1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.0"
torchvision = "^0.19.0"
torchaudio = "^2.4.0"
ipykernel = "^6.29.5"
lightning = "^2.4.0"
gdown = "^5.2.0"
datasets = "^2.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
